[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/NeighborHouse.gd" type="Script" id=1]
[ext_resource path="res://Sprites/neighbor_house.png" type="Texture" id=2]
[ext_resource path="res://Sounds/fire_burning.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/neighbor_house_burned.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 64, 55 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 60, 40 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 15, 36 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 15, 36 )

[node name="NeighborHouse" type="Area2D" index="0"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

visible = false
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="before_fire" type="CollisionShape2D" parent="StaticBody2D" index="0"]

visible = false
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="after_fire1" type="CollisionShape2D" parent="StaticBody2D" index="1"]

position = Vector2( -32, 8 )
shape = SubResource( 3 )

[node name="after_fire2" type="CollisionShape2D" parent="StaticBody2D" index="2"]

position = Vector2( 40, 8 )
shape = SubResource( 4 )

[node name="Normal" type="Sprite" parent="." index="2"]

texture = ExtResource( 2 )

[node name="fire" type="AudioStreamPlayer2D" parent="." index="3"]

scale = Vector2( 2.5, 2.5 )
stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 750.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Burned" type="Sprite" parent="." index="4"]

visible = false
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_NeighborHouse_body_entered"]


